fix page overflows

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ html {
 }
 section {
   position: relative;
-  max-width: 100vw;
 }
 nav {
   background-color: #1f1f1f;
